# RustButtonBoard

./: .gitignore  Cargo.toml  README.md
scripts/: development.sh  generateWordSamplesFromVoiceSynthesis.sh  install.sh
scripts/LXDE-autostart/: autostart
scripts/systemd/: button-board.service
src/: main.rs  remapper.rs
