[package]
name = "rust-speech-board"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.8.1"
rodio = "0.14.0"
serde_json = "1"
glob = "0.3.0"
subprocess = "0.2.7"

[[bin]]
name = "rust-speech-board"
path = "./src/main.rs"

[[bin]]
name = "rust-speech-board-remapper"
path = "./src/remapper.rs"